fix some bugs on mobiles

--- a/css/leon.css
+++ b/css/leon.css
@@ -483,6 +483,7 @@ body{
     .contact .info .label,
     .contact .info .link{
       font-size: 25px;
+      letter-spacing: 0;
 
     }
 
